fixed score so that it updates when user gets correct answer

--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
       <p class="welcome">Click the Start button to begin the game.</p>
       <button id="start-button">Start</button>
       <div id="game-container" style="display:none">
-        <div id="score-container">
-          <span id="score">0</span>
-        </div>
+        <div id="score-container"></div>
         <div id="timer-container">
           <span id="timer"></span> 
         </div>
